syntax = "proto3";
package api;

message SurveyMessage {
  int32 id = 1;
  string name = 2;
  string description = 3;
  repeated Topic topic = 4;
  repeated string options = 5;
  enum Action {
      CREATE = 0;
      END = 1;
      DELETE = 2;
  }

  Action action = 6;
}

message Topic {
  string label = 1;
}

message SurveyResponse {
  int32 id = 1;
  bool success = 2;
}

service Survey {
  rpc CreateSurvey(SurveyMessage) returns (SurveyResponse) {}
  rpc GetSurveys(Topic) returns (stream SurveyMessage) {}
}


service Vote{
  rpc Vote(VoteMessage) returns (VoteResponse){}
}

message VoteMessage {
  string vote = 1;
  int32 surveyId = 2;
}

message VoteResponse {
  bool success = 1;
}

